add shared mailbox to group send permission

--- a/.env
+++ b/.env
@@ -1,11 +1,15 @@
+# Токены доступа к SCIM и OAuth
 SCIM_TOKEN_ARG = "y0_AgAAAAAAAAAAAAvg"
-SCIM_DOMAIN_ID_ARG = 123456
+SCIM_DOMAIN_ID_ARG = 1234567
 
-OAUTH_TOKEN_ARG = "y0__xC5sqCkqveAAhj"
-ORG_ID_ARG = 654321
+OAUTH_TOKEN_ARG = "y0_AgAAAAB0It5oAAvg"
+ORG_ID_ARG = 1234567
 
 USERS_FILE_ARG = users.csv
 NEW_LOGIN_DEFAULT_FORMAT_ARG = "alias@domain.tld"
 DEFAULT_EMAIL_OUTPUT_FILE_ARG = "default_email_output.csv"
 DEFAULT_EMAIL_INPUT_FILE_ARG = "default_email_input.csv"
 DEFAULT_FORWARD_RULES_OUTPUT_FILE_ARG = "forward_rules_output.csv"
+
+# Значение IgnoreUsernameDomain должно быть таким же, как в конфиге утилиты SCIM (если в утилите это значение отсутствует, значит оно должно быть false)
+IgnoreUsernameDomain = false
