add 2FA settings and rich support

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-# Токены доступа к SCIM и OAuth
 SCIM_TOKEN_ARG = "y0_AgAAAAAAAAAAAAvg"
 SCIM_DOMAIN_ID_ARG = 1234567
 
@@ -10,6 +9,7 @@ NEW_LOGIN_DEFAULT_FORMAT_ARG = "alias@domain.tld"
 DEFAULT_EMAIL_OUTPUT_FILE_ARG = "default_email_output.csv"
 DEFAULT_EMAIL_INPUT_FILE_ARG = "default_email_input.csv"
 DEFAULT_FORWARD_RULES_OUTPUT_FILE_ARG = "forward_rules_output.csv"
+DEFAULT_2FA_SETTINGS_OUTPUT_FILE_ARG = "users_2fa_output.csv"
+DEFAULT_2FA_SETTINGS_INPUT_FILE_ARG = "users_2fa_input.csv"
 
-# Значение IgnoreUsernameDomain должно быть таким же, как в конфиге утилиты SCIM (если в утилите это значение отсутствует, значит оно должно быть false)
 IgnoreUsernameDomain = false
