--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-OAUTH_TOKEN_ARG = "y0__xC5sqCkqveAAh"
+SCIM_TOKEN_ARG = "y0_AgAAAAAAAAAAAAvg"
+SCIM_DOMAIN_ID_ARG = 1234567
+
+OAUTH_TOKEN_ARG = "y0_AgAAAAB0It5oAAvg-QAAAAEGMWr8AAC"
 ORG_ID_ARG = 1234567
 
 USERS_FILE_ARG = users.csv
